manifests/core/argo-workflows-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo-workflows
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-ovh-webhook"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/client-crt-optional: "false"
    haproxy.org/client-ca: "haproxy-controller/client-ca-cert"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - argo-workflows.daddyshome.fr
    secretName: argo-workflows-tls
  rules:
  - host: argo-workflows.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-workflows-server
            port:
              number: 2746
